 * Fix jump key not being ignored after placing girder or target

Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 + Control, CTF_Blizzard: Display scores in stats screen
 + CTF_Blizzard: Various minor graphical and text improvements
 + Frenzy: Change ammo slots
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * Space Invasion: No longer allow to set start shield above shield limit
 * Battalion, WxW: Crates drop between turns, when appropriate
 * Battalion: Make Sudden Death effects with the base game
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive
 * HedgeEditor: Fix major FPS drop when there are a lot of objects
 * Control: Fix score failure after using extra time
 * Frenzy: Fix incorrect ammo slot numbers in ammo menu
 * Continental supplies: Computer teams now select random continent
 * WxW, Racer: Computer teams no longer block setup phase

A Classic Fairytale:
 + Backstab: Disable utilities before traitor has been dealt with
 * Backstab: Prevent attacking the cannibals before making the choice
 * Backstab: Fix/tweak behaviour in 3rd enemy wave
 * First blood: Fix Lua error when hitting Attack after failing the rope challenge
 * First blood: Fix a cut scene being played twice in row
 * The Shadow Falls: Fix Lua error when hog dies during choice phase
 * The Shadow Falls: Fix mission getting stuck when hog dies after accepting offer, but before returning
 * The Shadow Falls: Fix many other Lua errors when hogs die in certain situations
 * General: Clear hazards around cyborg when it appears in cut scenes
 * General: Disable Sudden Death for all missions
 * Various minor tweaks and bugfixes

A Space Adventure:
 + Show your current records at mission start when re-playing one of the challenges